raffia/tests/error/less/mixin/mixed-definition-params-2.snap
---
source: raffia/tests/error.rs
---
error: using both `;` and `,` as delimiters in the same Less mixin is disallowed
  ┌─ mixed-definition-params-2.less:1:20
  │
1 │ .mixin(@a: 5, @b: 6; @c: 7) {}
  │                    ^


